--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <th scope="col">Train Name</th>
                     <th scope="col">Destination</th>
                     <th scope="col">Frequency</th>
-                    <th scope="col">Next Arrival</th>
+                    <th scope="col">Train Time</th>
                     <th scope="col">Minutes Away</th>
                   </tr>
                 </thead>
